# riccati

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  Better nonoscillatory phase functions.ipynb  CCM_example.tex  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  cmo-plots.py  cmotalk.mplstyle  comments.txt  flowchart.tex  main.tex  paper-plots.py  plot-riccati.py  pyproject.toml  readthedocs.yml  refs.bib  requirements.txt  riccati.py  riccatipaper.mplstyle  riccerr.tex  setup.py  test-axion.py  test-riccati.py  tox.ini
.github/: PR_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-name.md
.github/workflows/: package.yml  tests.yml
arnoldwkb/: bremer237.m
benchmarks/: fig1.py  requirements.txt
benchmarks/data/: eq237.txt
binder/: environment.yml
bremerphasefun/: jacobi_quad.f90  legendre_eval.f90  makefile  tensor.f90  test_chebyshev.f90  test_eq237.f90  test_eq237_2.f90  test_kummer.f90
code/: integralchk.m  paper-plots.py
code/arnoldwkb/: PCFU.m  Test_adaptive_WKB_marching_method_Airy.m  Test_adaptive_WKB_marching_method_PCF.m  adaptive_WKB_marching_method.m  bremer237.m  clenshaw_curtis.m
code/bremerphasefun/: chebyshev.f90  kummer.f90  kummer_legendre.f90  laguerre_quad.f90  makefile  odesolve.f90  test_eq237.f90  test_eq237_2.f90  test_kummer.f90  test_odesolve.f90  test_tensor.f90  utils.f90
docs/: Makefile  api.rst  conf.py  examples.ipynb  installation.rst  quickstart.ipynb  requirements.txt
docs/source/: api.rst  conf.py  examples.ipynb  examples.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  riccati.rst
joss-paper/: fig1.py  paper.bib  paper.md
notebooks/: Barnett-WKB.nb  Better nonoscillatory phase functions [analytic].ipynb
plots/: flowchart.tikz
riccati/: __init__.py  _version.py  chebutils.py  evolve.py  solversetup.py  step.py  stepsize.py
riccati/tests/: test-riccati.py  test_riccati.py
src/: CMakeLists.txt  pybind_demo.cpp
tables/: bremer237.tex  bremer237_arnold-tol-6.tex  bremer237_arnold.tex  bremer237_oscmethods.tex  bremer237_oscmethods.txt  bremer237_oscmethods_masked.tex  bremer237_oscmethods_tol-6.tex  bremer237_oscmethods_tol-6.txt  bremer237_rk78-tol-12.txt  bremer237_rk78-tol-14.txt  bremer237_rk78-tol-6.txt  legendre-faster.tex  legendre-fastest-morestuff.tex  legendre-fastest.tex  legendre.tex  legendre2.tex
tables/new/all/: bremer237-all-1e-12.tex
tables/new/kummer/: bremer237-kummer.txt
tables/new/oscode/: bremer237-oscode.txt
tables/new/rdc/: bremer237-rdc.txt  legendre-rdc.tex  legendre-rdc.txt
tables/new/ref/: eq237.txt
tables/new/rk/: bremer237-rk.txt
tables/new/wkbmarching/: bremer237-wkbmarching.txt
tables/old/all/: bremer237_oscmethods.tex  bremer237_oscmethods.txt
tables/old/ref/: eq237.txt
tests/: test_riccati.py
(+6 files in other folders)
